# newport-smc100

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: smc100_connect.py
src/newport_smc100/: __init__.py  smc100.py
